; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_count-objects.c_real_report_garbage.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_count-objects.c_real_report_garbage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@size_garbage = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%s: %s\00", align 1
@garbage = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @real_report_garbage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @real_report_garbage(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.stat, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i8* @bits_to_msg(i32 %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  br label %29

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @stat(i8* %13, %struct.stat* %5)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %12
  %17 = getelementptr inbounds %struct.stat, %struct.stat* %5, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i32, i32* @size_garbage, align 4
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %20, %18
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* @size_garbage, align 4
  br label %23

23:                                               ; preds = %16, %12
  %24 = load i8*, i8** %6, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @warning(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %24, i8* %25)
  %27 = load i32, i32* @garbage, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @garbage, align 4
  br label %29

29:                                               ; preds = %23, %11
  ret void
}

declare dso_local i8* @bits_to_msg(i32) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @warning(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
